--- a/index.html
+++ b/index.html
@@ -11,6 +11,35 @@
 </head>
 
 <body>
+    <h1>Battle Of The Elements</h1>
+
+    <div class="statusContainer">
+        
+    </div>    
+
+
+
+
+
+    <div class="scoreContainer">
+        <div class="playerScoreBox">
+            <p>Player Score:</p>
+            <div class="playerScore"></div>
+        </div>
+        <div class="computerScoreBox">
+            <p>Computer Score:</p>
+            <div class="computerScore"></div>
+        </div>
+    </div>
+
+    <div class = "choiceContainer">
+        <button class="fireButton">Fire</button>
+        <button class="waterButton">Water</button>
+        <button class="earthButton">Earth</button>
+    </div>
+
+
+
 </body>
 
 </html>
