--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         </div>
     </div>
     <div class="choiceContainer">
-        <img src="/images/fire.png" class="fire">
-        <img src="/images/water.png" class="water">
-        <img src="/images/earth.png" class="earth">
+        <img src="images/fire.png" class="fire">
+        <img src="images/water.png" class="water">
+        <img src="images/earth.png" class="earth">
     </div>
     <div class="rulesContainer">
         <div><span class="fireRule">Fire</span> <span class="scorches"> Scorches </span> <span class="earthRule">Earth</span></div>
