Remove slash from in front of file paths

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="compBox">
             Enemy's Element
             <div class="imageBox">
-                <img src="/images/fire.png" class="compFire grayScale">
-                <img src="/images/water.png" class="compWater grayScale">
-                <img src="/images/earth.png" class="compEarth grayScale">
+                <img src="images/fire.png" class="compFire grayScale">
+                <img src="images/water.png" class="compWater grayScale">
+                <img src="images/earth.png" class="compEarth grayScale">
             </div>
         </div>
         <div class="statusBox">
